--- a/Resources/Prototypes/_NF/Recipes/Cooking/medical_recipes.yml
+++ b/Resources/Prototypes/_NF/Recipes/Cooking/medical_recipes.yml
@@ -118,6 +118,42 @@
     Bicaridine: 5
   recipeType: MedicalAssembler # Frontier
 
+- type: microwaveMealRecipe
+  id: RecipePunctAutoInjector
+  name: puncturase auto-injector
+  result: PunctAutoInjector
+  time: 5
+  solids:
+    BlankMediPen: 1
+  reagents:
+    Puncturase: 10
+    TranexamicAcid: 5
+  recipeType: MedicalAssembler # Frontier
+  
+- type: microwaveMealRecipe
+  id: RecipePyraAutoInjector
+  name: pyrazine auto-injector
+  result: PyraAutoInjector
+  time: 5
+  solids:
+    BlankMediPen: 1
+  reagents:
+    Pyrazine: 10
+    Dermaline: 10
+  recipeType: MedicalAssembler # Frontier
+
+- type: microwaveMealRecipe
+  id: RecipeAirlossAutoInjector
+  name: airloss auto-injector
+  result: AirlossAutoInjector
+  time: 5
+  solids:
+    BlankMediPen: 1
+  reagents:
+    Saline: 20
+    DexalinPlus: 20
+  recipeType: MedicalAssembler # Frontier
+
 #Frontier pen recipes
 
   - type: microwaveMealRecipe
@@ -130,4 +166,63 @@
   reagents:
     TranexamicAcid: 5
     Saline: 15
+  recipeType: MedicalAssembler # Frontier
+
+  - type: microwaveMealRecipe
+  id: RecipePenEpinine
+  name: epinine auto-injector
+  result: EpinineAutoInjector
+  time: 5
+  solids:
+    BlankMediPen: 1
+  reagents:
+    Desoxyephedrine: 10
+    Dylovene: 10
+  recipeType: MedicalAssembler # Frontier
+  
+  - type: microwaveMealRecipe
+  id: RecipePenCrisisAutoInjector
+  name: crisis auto-injector
+  result: CrisisAutoInjector
+  time: 5
+  solids:
+    BlankMediPen: 1
+  reagents:
+    Inaprovaline: 10
+    Dexalin+: 10
+  recipeType: MedicalAssembler # Frontier
+      
+  - type: microwaveMealRecipe
+  id: RecipePenCausticAutoInjectorSider
+  name: coagulate auto-injector
+  result: CausticAutoInjector
+  time: 5
+  solids:
+    BlankMediPen: 1
+  reagents:
+    Siderlac: 15
+  recipeType: MedicalAssembler # Frontier
+        
+  - type: microwaveMealRecipe
+  id: RecipePenLacerAutoInjector
+  name: lacerinol auto-injector
+  result: LacerAutoInjector
+  time: 5
+  solids:
+    BlankMediPen: 1
+  reagents:
+    Lacerinol: 10
+    TranexamicAcid: 5
+  recipeType: MedicalAssembler # Frontier
+            
+  - type: microwaveMealRecipe
+  id: RecipePenBruizAutoInjector
+  name: bruizine auto-injector
+  result: BruizAutoInjector
+  time: 5
+  solids:
+    BlankMediPen: 1
+  reagents:
+    Bruizine: 10
+    TranexamicAcid: 5
   recipeType: MedicalAssembler # Frontier
