Sprite correction. Recipe fix. Remove "clean pen" recipe.

--- a/Resources/Prototypes/_NF/Recipes/Cooking/medical_recipes.yml
+++ b/Resources/Prototypes/_NF/Recipes/Cooking/medical_recipes.yml
@@ -1,59 +1,59 @@
-  #pen recycling recipes
+  #pen recycling recipes #I think this is going to become cumbersome to maintain over time and the expanded reclaimer code makes it redundant.
 
-- type: microwaveMealRecipe
-  id: RecipeCleanEmergencyMedipen
-  name: sterilize and reset pen
-  result: BlankMediPen
-  time: 5
-  solids:
-    EmergencyMedipen: 1
-  reagents:
-    SpaceCleaner: 1
-  recipeType: MedicalAssembler # Frontier
+#- type: microwaveMealRecipe
+#  id: RecipeCleanEmergencyMedipen
+#  name: sterilize and reset pen
+#  result: BlankMediPen
+#  time: 5
+#  solids:
+#    EmergencyMedipen: 1
+#  reagents:
+#    SpaceCleaner: 1
+#  recipeType: MedicalAssembler # Frontier
 
-- type: microwaveMealRecipe
-  id: RecipeCleanAntiPoisonMedipen
-  name: sterilize and reset pen
-  result: BlankMediPen
-  time: 5
-  solids:
-    AntiPoisonMedipen: 1
-  reagents:
-    SpaceCleaner: 5
-  recipeType: MedicalAssembler # Frontier
+#- type: microwaveMealRecipe
+#  id: RecipeCleanAntiPoisonMedipen
+#  name: sterilize and reset pen
+#  result: BlankMediPen
+#  time: 5
+#  solids:
+#    AntiPoisonMedipen: 1
+#  reagents:
+#    SpaceCleaner: 5
+#  recipeType: MedicalAssembler # Frontier
 
-- type: microwaveMealRecipe
-  id: RecipeCleanBruteAutoInjector
-  name: sterilize and reset pen
-  result: BlankMediPen
-  time: 5
-  solids:
-    BruteAutoInjector: 1
-  reagents:
-    SpaceCleaner: 5
-  recipeType: MedicalAssembler # Frontier
+#- type: microwaveMealRecipe
+#  id: RecipeCleanBruteAutoInjector
+#  name: sterilize and reset pen
+#  result: BlankMediPen
+#  time: 5
+#  solids:
+#    BruteAutoInjector: 1
+#  reagents:
+#    SpaceCleaner: 5
+#  recipeType: MedicalAssembler # Frontier
 
-- type: microwaveMealRecipe
-  id: RecipeCleanBurnAutoInjector
-  name: sterilize and reset pen
-  result: BlankMediPen
-  time: 5
-  solids:
-    BurnAutoInjector: 1
-  reagents:
-    SpaceCleaner: 5
-  recipeType: MedicalAssembler # Frontier
+#- type: microwaveMealRecipe
+#  id: RecipeCleanBurnAutoInjector
+#  name: sterilize and reset pen
+#  result: BlankMediPen
+#  time: 5
+#  solids:
+#    BurnAutoInjector: 1
+#  reagents:
+#    SpaceCleaner: 5
+#  recipeType: MedicalAssembler # Frontier
 
-- type: microwaveMealRecipe
-  id: RecipeCleanRadAutoInjector
-  name: sterilize and reset pen
-  result: BlankMediPen
-  time: 5
-  solids:
-    RadAutoInjector: 1
-  reagents:
-    SpaceCleaner: 5
-  recipeType: MedicalAssembler # Frontier
+#- type: microwaveMealRecipe
+#  id: RecipeCleanRadAutoInjector
+#  name: sterilize and reset pen
+#  result: BlankMediPen
+#  time: 5
+#  solids:
+#    RadAutoInjector: 1
+#  reagents:
+#    SpaceCleaner: 5
+#  recipeType: MedicalAssembler # Frontier
 
   #pen recipes
   #Upstream recipes
@@ -156,7 +156,7 @@
 
 #Frontier pen recipes
 
-  - type: microwaveMealRecipe
+- type: microwaveMealRecipe
   id: RecipePenCoagulate
   name: coagulate auto-injector
   result: CoagulateAutoInjector
@@ -168,7 +168,7 @@
     Saline: 15
   recipeType: MedicalAssembler # Frontier
 
-  - type: microwaveMealRecipe
+- type: microwaveMealRecipe
   id: RecipePenEpinine
   name: epinine auto-injector
   result: EpinineAutoInjector
@@ -180,7 +180,7 @@
     Dylovene: 10
   recipeType: MedicalAssembler # Frontier
   
-  - type: microwaveMealRecipe
+- type: microwaveMealRecipe
   id: RecipePenCrisisAutoInjector
   name: crisis auto-injector
   result: CrisisAutoInjector
@@ -191,19 +191,8 @@
     Inaprovaline: 10
     Dexalin+: 10
   recipeType: MedicalAssembler # Frontier
-      
-  - type: microwaveMealRecipe
-  id: RecipePenCausticAutoInjectorSider
-  name: coagulate auto-injector
-  result: CausticAutoInjector
-  time: 5
-  solids:
-    BlankMediPen: 1
-  reagents:
-    Siderlac: 15
-  recipeType: MedicalAssembler # Frontier
         
-  - type: microwaveMealRecipe
+- type: microwaveMealRecipe
   id: RecipePenLacerAutoInjector
   name: lacerinol auto-injector
   result: LacerAutoInjector
@@ -215,7 +204,7 @@
     TranexamicAcid: 5
   recipeType: MedicalAssembler # Frontier
             
-  - type: microwaveMealRecipe
+- type: microwaveMealRecipe
   id: RecipePenBruizAutoInjector
   name: bruizine auto-injector
   result: BruizAutoInjector
