--- a/Resources/Prototypes/_NF/Recipes/Cooking/medical_recipes.yml
+++ b/Resources/Prototypes/_NF/Recipes/Cooking/medical_recipes.yml
@@ -189,7 +189,7 @@
     BlankMediPen: 1
   reagents:
     Inaprovaline: 10
-    Dexalin+: 10
+    DexalinPlus: 10
   recipeType: MedicalAssembler # Frontier
         
 - type: microwaveMealRecipe
