Plus once more.

--- a/Resources/Prototypes/_NF/Entities/Objects/Specific/Medical/hypospray.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Specific/Medical/hypospray.yml
@@ -136,7 +136,7 @@
         reagents:
         - ReagentId: Inaprovaline
           Quantity: 10
-        - ReagentId: Dexalin+
+        - ReagentId: DexalinPlus
           Quantity: 10
   - type: Tag
     tags: []
