Reduces chem stock availability to elements that cannot be otherwise sourced.
Removes chem crate restocks from the trade station as per directive from people who hide in the shadows.

Maintains a restock crate of chemicals that either lack a proper source or can only be sourced in trace amounts by current methods. Re-examine when those sources are more commonly available.

--- a/Resources/Prototypes/Catalog/Cargo/cargo_medical.yml
+++ b/Resources/Prototypes/Catalog/Cargo/cargo_medical.yml
@@ -128,32 +128,34 @@
   category: cargoproduct-category-name-medical
   group: market
 
-- type: cargoProduct
-  id: ChemistryP
-  icon:
-    sprite: Structures/Storage/Crates/chemcrate_secure.rsi
-    state: icon
-  product: CrateChemistryP
-  cost: 850
-  category: cargoproduct-category-name-medical
-  group: market
+  # Frontier Removes base chemistry crates from cargo sale.
 
-- type: cargoProduct
-  id: ChemistryS
-  icon:
-    sprite: Structures/Storage/Crates/chemcrate_secure.rsi
-    state: icon
-  product: CrateChemistryS
-  cost: 750
-  category: cargoproduct-category-name-medical
-  group: market
+- #type: cargoProduct
+  #id: ChemistryP
+  #icon:
+  #  sprite: Structures/Storage/Crates/chemcrate_secure.rsi
+  #  state: icon
+  #product: CrateChemistryP
+  #cost: 850
+  #category: cargoproduct-category-name-medical
+  #group: market
 
-- type: cargoProduct
-  id: CrateChemistryD
-  icon:
-    sprite: Structures/Storage/Crates/chemcrate_secure.rsi
-    state: icon
-  product: CrateChemistryD
-  cost: 750
-  category: cargoproduct-category-name-medical
-  group: market
+- #type: cargoProduct
+  #id: ChemistryS
+  #icon:
+  #  sprite: Structures/Storage/Crates/chemcrate_secure.rsi
+  #  state: icon
+  #product: CrateChemistryS
+  #cost: 750
+  #category: cargoproduct-category-name-medical
+  #group: market
+
+- #type: cargoProduct
+  #id: CrateChemistryD
+  #icon:
+  #  sprite: Structures/Storage/Crates/chemcrate_secure.rsi
+  #  state: icon
+  #product: CrateChemistryD
+  #cost: 750
+  #category: cargoproduct-category-name-medical
+  #group: market
