--- a/Resources/Prototypes/_NF/Catalog/Cargo/cargo_medical.yml
+++ b/Resources/Prototypes/_NF/Catalog/Cargo/cargo_medical.yml
@@ -7,3 +7,13 @@
   cost: 3000
   category: cargoproduct-category-name-medical
   group: market
+
+- type: cargoProduct
+  id: ChemistryDL
+  icon:
+    sprite: Structures/Storage/Crates/chemcrate_secure.rsi
+    state: icon
+  product: CrateChemistryDL
+  cost: 750
+  category: cargoproduct-category-name-medical
+  group: market
