--- a/Resources/Prototypes/_NF/Catalog/Fills/Crates/chemistry.yml
+++ b/Resources/Prototypes/_NF/Catalog/Fills/Crates/chemistry.yml
@@ -8,3 +8,30 @@
       contents:
         - id: JugSpaceCleaner
           amount: 5
+
+- type: entity
+  id: CrateChemistryDL
+  parent: CrateChemistrySecure
+  name: chemicals crate (DL)
+  description: Contains chemicals from the bargain bin overstock-block of elements. Requires understanding of hinges to open.
+  components:
+    - type: StorageFill
+      contents:
+        - id: JugAluminium
+          amount: 1
+        - id: JugCopper
+          amount: 1
+        - id: JugEthanol
+          amount: 1
+        - id: JugFluorine
+          amount: 1
+        - id: JugMercury
+          amount: 1
+        - id: JugLithium
+          amount: 1
+        - id: JugPhosphorus
+          amount: 1
+        - id: JugRadium
+          amount: 1
+        - id: JugZinc
+          amount: 1
