Adds new plushies from GhostPrince

--- a/Resources/Prototypes/_NF/Catalog/VendingMachines/Inventories/cuddlycritter.yml
+++ b/Resources/Prototypes/_NF/Catalog/VendingMachines/Inventories/cuddlycritter.yml
@@ -5,6 +5,11 @@
     PlushieHampter: 3
     PlushieLizard: 3
     PlushieSpaceLizard: 3
+    Plushie_Botanist: 3
+    Plushie_Cmo: 3
+    Plushie_Construction: 3
+    Plushie_Engineer: 3
+    Plushie_SharkmMinnow: 3
     PlushieVox: 3
     PlushieRouny: 3
     PlushieMoth: 3
