--- a/Resources/Prototypes/_NF/Entities/Objects/Fun/toys.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Fun/toys.yml
@@ -24,6 +24,46 @@
   - type: StinkyTrait
 
 - type: entity
+  parent: PlushieSpaceLizard
+  id: Plushie_Botanist #Weh!
+  name: botanist plushie
+  description: You need food and it just wont stop making rainbow weed.
+  components:
+  - type: Sprite
+    sprite: _NF/Objects/Fun/toys.rsi
+    state: plushie_botanist
+
+- type: entity
+  parent: PlushieSpaceLizard
+  id: Plushie_Engineer #Weh!
+  name: engineer plushie
+  description: The poor thing is just sitting there with nothing to do! Give it a hug!
+  components:
+  - type: Sprite
+    sprite: _NF/Objects/Fun/toys.rsi
+    state: plushie_engineer
+
+- type: entity
+  parent: PlushieSpaceLizard
+  id: Plushie_Construction #Weh!
+  name: construction plushie
+  description: It doubles as a hammer!
+  components:
+  - type: Sprite
+    sprite: _NF/Objects/Fun/toys.rsi
+    state: plushie_construction
+
+- type: entity
+  parent: PlushieSpaceLizard
+  id: Plushie_Cmo #Weh!
+  name: chief medical officer plushie
+  description: This plushie is in charge of all of the other plushies!
+  components:
+  - type: Sprite
+    sprite: _NF/Objects/Fun/toys.rsi
+    state: plushie_cmo
+
+- type: entity
   parent: BasePlushie
   id: PlushieJanitor
   name: janitor plushie
@@ -472,6 +512,25 @@
   - type: Sprite
     sprite: _NF/Objects/Fun/catplushie.rsi
     state: white
+
+- type: entity
+  parent: PlushieCarp
+  id: Plushie_SharkmMinnow
+  name: sharkminnow plushie
+  description: It's killed you! It's killed your friends! Now this source of PTSD is a Pretty Terrific Stuffed Doodad!
+  components:
+  - type: Sprite
+    sprite: _NF/Objects/Fun/sharkminnow.rsi
+    state: sharkminnowplush
+  - type: Item
+    heldPrefix: sharkminnowplush
+    inhandVisuals:
+      left:
+      - state: inhand-left
+        shader: unshaded
+      right:
+      - state: inhand-right
+        shader: unshaded
 
 - type: entity
   name: Emotional support RPG
