--- a/Resources/Prototypes/_NF/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Machines/lathe.yml
@@ -1014,6 +1014,11 @@
       - PlushieBeeRecipe
       - PlushieLizardRecipe
       - PlushieSpaceLizardRecipe
+      - Plushie_BotanistRecipe
+      - Plushie_CmoRecipe
+      - Plushie_EngineerRecipe
+      - Plushie_ConstructionRecipe
+      - Plushie_SharkmMinnowRecipe
       - PlushieVoxRecipe
       - PlushieMoffRecipe
       - PlushieMoffsicianRecipe
