--- a/Resources/Prototypes/_NF/Recipes/Lathes/prizecounter.yml
+++ b/Resources/Prototypes/_NF/Recipes/Lathes/prizecounter.yml
@@ -67,6 +67,31 @@
   parent: BasePrize15Recipe
 
 - type: latheRecipe
+  id: Plushie_BotanistRecipe
+  result: Plushie_Botanist
+  parent: BasePrize15Recipe
+
+- type: latheRecipe
+  id: Plushie_CmoRecipe
+  result: Plushie_Cmo
+  parent: BasePrize15Recipe
+
+- type: latheRecipe
+  id: Plushie_ConstructionRecipe
+  result: Plushie_Construction
+  parent: BasePrize15Recipe
+
+- type: latheRecipe
+  id: Plushie_EngineerRecipe
+  result: Plushie_Engineer
+  parent: BasePrize15Recipe
+
+- type: latheRecipe
+  id: Plushie_SharkmMinnowRecipe
+  result: Plushie_SharkmMinnow
+  parent: BasePrize15Recipe
+
+- type: latheRecipe
   id: PlushieSpaceLizardRecipe
   result: PlushieSpaceLizard
   parent: BasePrize15Recipe
