--- a/Resources/Prototypes/Catalog/Cargo/cargo_medical.yml
+++ b/Resources/Prototypes/Catalog/Cargo/cargo_medical.yml
@@ -126,36 +126,37 @@
   product: CrateMindShieldImplants
   cost: 3000
   category: cargoproduct-category-name-medical
+  group: market  
+
+- type: cargoProduct
+  id: ChemistryP
+  abstract: true # Frontier
+  icon:
+    sprite: Structures/Storage/Crates/chemcrate_secure.rsi
+    state: icon
+  product: CrateChemistryP
+  cost: 850
+  category: cargoproduct-category-name-medical
   group: market
 
-  # Frontier Removes base chemistry crates from cargo sale.
+- type: cargoProduct
+  id: ChemistryS
+  abstract: true # Frontier
+  icon:
+    sprite: Structures/Storage/Crates/chemcrate_secure.rsi
+    state: icon
+  product: CrateChemistryS
+  cost: 750
+  category: cargoproduct-category-name-medical
+  group: market
 
-- #type: cargoProduct
-  #id: ChemistryP
-  #icon:
-  #  sprite: Structures/Storage/Crates/chemcrate_secure.rsi
-  #  state: icon
-  #product: CrateChemistryP
-  #cost: 850
-  #category: cargoproduct-category-name-medical
-  #group: market
-
-- #type: cargoProduct
-  #id: ChemistryS
-  #icon:
-  #  sprite: Structures/Storage/Crates/chemcrate_secure.rsi
-  #  state: icon
-  #product: CrateChemistryS
-  #cost: 750
-  #category: cargoproduct-category-name-medical
-  #group: market
-
-- #type: cargoProduct
-  #id: CrateChemistryD
-  #icon:
-  #  sprite: Structures/Storage/Crates/chemcrate_secure.rsi
-  #  state: icon
-  #product: CrateChemistryD
-  #cost: 750
-  #category: cargoproduct-category-name-medical
-  #group: market
+- type: cargoProduct
+  id: CrateChemistryD
+  abstract: true # Frontier
+  icon:
+    sprite: Structures/Storage/Crates/chemcrate_secure.rsi
+    state: icon
+  product: CrateChemistryD
+  cost: 750
+  category: cargoproduct-category-name-medical
+  group: market
