--- a/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
@@ -505,6 +505,7 @@
     - StationAnchorCircuitboard
     # - SalvageMagnetMachineCircuitboard # Frontier
     - SalvageTechFabCircuitboardNF # Frontier
+    - NFScrapProcessorCircuitboard # Frontier
     - BlueprintLithographMachineCircuitboard # Frontier
     dynamicRecipes:
       - ThermomachineFreezerMachineCircuitBoard
@@ -1396,7 +1397,6 @@
         - MaterialBananium1
         - MaterialDiamond
         - BluespaceCrystal #Nyano - Summary: Bluespace Crystals can be created here.
-        #- SmeltScrap # Frontier
 
 - type: entity
   parent: OreProcessor
@@ -1427,7 +1427,6 @@
       - MaterialBananium1
       - MaterialDiamond
       - BluespaceCrystal #Nyano - Summary: Bluespace Crystals can be created here.
-      - SmeltScrap # Frontier
 
 - type: entity
   parent: BaseLathe
