--- a/Resources/Prototypes/Entities/Objects/Specific/Medical/hypospray.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/Medical/hypospray.yml
@@ -212,12 +212,12 @@
   - type: SolutionContainerManager
     solutions:
       pen:
-        maxVol: 20
+        maxVol: 25 # Frontier
         reagents:
         - ReagentId: Bicaridine
           Quantity: 15
         - ReagentId: TranexamicAcid
-          Quantity: 5
+          Quantity: 10 # Frontier
   - type: Tag
     tags: []
 
@@ -308,12 +308,12 @@
   - type: SolutionContainerManager
     solutions:
       pen:
-        maxVol: 15
+        maxVol: 20 # Frontier
         reagents:
         - ReagentId: Puncturase
           Quantity: 10
         - ReagentId: TranexamicAcid
-          Quantity: 5
+          Quantity: 10 #Frontier
   - type: Tag
     tags: []
 
