Price change and description butchering.

--- a/Resources/Prototypes/_NF/Catalog/Fills/Crates/chemistry.yml
+++ b/Resources/Prototypes/_NF/Catalog/Fills/Crates/chemistry.yml
@@ -13,7 +13,7 @@
   id: CrateChemistryDL
   parent: CrateChemistrySecure
   name: chemicals crate (DL)
-  description: Contains chemicals from the bargain bin overstock-block of elements. Requires understanding of hinges to open.
+  description: Contains chemicals that rarely occur in nature. Requires understanding of hinges to open.
   components:
     - type: StorageFill
       contents:
