--- a/Resources/Prototypes/_NF/Catalog/VendingMachines/Inventories/cuddlycritter.yml
+++ b/Resources/Prototypes/_NF/Catalog/VendingMachines/Inventories/cuddlycritter.yml
@@ -5,11 +5,7 @@
     PlushieHampter: 3
     PlushieLizard: 3
     PlushieSpaceLizard: 3
-    Plushie_Botanist: 3
-    Plushie_Cmo: 3
-    Plushie_Construction: 3
-    Plushie_Engineer: 3
-    Plushie_SharkmMinnow: 3
+    NFPlushieSharkMinnow: 3
     PlushieVox: 3
     PlushieRouny: 3
     PlushieMoth: 3
@@ -67,3 +63,7 @@
     PlushieNuke: 3
     PlushieRGBee: 3
     BalloonCorgi: 2
+    NFPlushieBotanist: 3
+    NFPlushieCmo: 3
+    #NFPlushieConstruction: 3 #Removing for the moment pending construction graph resolution
+    NFPlushieEngineer: 3
