--- a/Resources/Prototypes/_NF/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Machines/lathe.yml
@@ -1014,11 +1014,7 @@
       - PlushieBeeRecipe
       - PlushieLizardRecipe
       - PlushieSpaceLizardRecipe
-      - Plushie_BotanistRecipe
-      - Plushie_CmoRecipe
-      - Plushie_EngineerRecipe
-      - Plushie_ConstructionRecipe
-      - Plushie_SharkmMinnowRecipe
+      - NFPlushieSharkMinnowRecipe
       - PlushieVoxRecipe
       - PlushieMoffRecipe
       - PlushieMoffsicianRecipe
@@ -1097,6 +1093,10 @@
       - PlushieCatWhiteRecipe
   - type: EmagLatheRecipes
     emagStaticRecipes:
+      - NFPlushieBotanistRecipe
+      - NFPlushieCmoRecipe
+      - NFPlushieEngineerRecipe
+      #- NFPlushieConstructionRecipe #Removing for the moment pending construction graph resolution
       - PlushieJesterRecipe
       - PlushieJanitorRecipe
       - PlushieNukeRecipe
