--- a/Resources/Prototypes/_NF/Recipes/Lathes/prizecounter.yml
+++ b/Resources/Prototypes/_NF/Recipes/Lathes/prizecounter.yml
@@ -67,28 +67,8 @@
   parent: BasePrize15Recipe
 
 - type: latheRecipe
-  id: Plushie_BotanistRecipe
-  result: Plushie_Botanist
-  parent: BasePrize15Recipe
-
-- type: latheRecipe
-  id: Plushie_CmoRecipe
-  result: Plushie_Cmo
-  parent: BasePrize15Recipe
-
-- type: latheRecipe
-  id: Plushie_ConstructionRecipe
-  result: Plushie_Construction
-  parent: BasePrize15Recipe
-
-- type: latheRecipe
-  id: Plushie_EngineerRecipe
-  result: Plushie_Engineer
-  parent: BasePrize15Recipe
-
-- type: latheRecipe
-  id: Plushie_SharkmMinnowRecipe
-  result: Plushie_SharkmMinnow
+  id: NFPlushieSharkMinnowRecipe
+  result: NFPlushieSharkMinnow
   parent: BasePrize15Recipe
 
 - type: latheRecipe
@@ -491,6 +471,26 @@
   parent: BasePrize15Recipe
 
 # EMAG
+
+- type: latheRecipe
+  id: NFPlushieBotanistRecipe
+  result: NFPlushieBotanist
+  parent: BasePrize50Recipe
+
+- type: latheRecipe
+  id: NFPlushieCmoRecipe
+  result: NFPlushieCmo
+  parent: BasePrize50Recipe
+
+- type: latheRecipe
+  id: NFPlushieConstructionRecipe
+  result: NFPlushieConstruction
+  parent: BasePrize50Recipe
+
+- type: latheRecipe
+  id: NFPlushieEngineerRecipe
+  result: NFPlushieEngineer
+  parent: BasePrize50Recipe
 
 - type: latheRecipe
   id: PlushieJesterRecipe
