--- a/Resources/Prototypes/Entities/Objects/Specific/Medical/hypospray.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/Medical/hypospray.yml
@@ -313,7 +313,7 @@
         - ReagentId: Puncturase
           Quantity: 10
         - ReagentId: TranexamicAcid
-          Quantity: 10 #Frontier
+          Quantity: 5
   - type: Tag
     tags: []
 
