Apply suggestions from code review
Oh boy

Co-authored-by: Whatstone <166147148+whatston3@users.noreply.github.com>

--- a/Resources/Prototypes/Entities/Objects/Specific/Medical/hypospray.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/Medical/hypospray.yml
@@ -212,12 +212,12 @@
   - type: SolutionContainerManager
     solutions:
       pen:
-        maxVol: 25 # Frontier
+        maxVol: 20
         reagents:
         - ReagentId: Bicaridine
           Quantity: 15
         - ReagentId: TranexamicAcid
-          Quantity: 10 # Frontier
+          Quantity: 5
   - type: Tag
     tags: []
 
@@ -308,7 +308,7 @@
   - type: SolutionContainerManager
     solutions:
       pen:
-        maxVol: 20 # Frontier
+        maxVol: 15
         reagents:
         - ReagentId: Puncturase
           Quantity: 10
