--- a/Resources/Prototypes/_NF/Entities/Objects/Specific/Medical/hypospray.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Specific/Medical/hypospray.yml
@@ -91,7 +91,7 @@
   name: epinine auto-injector
   parent: ChemicalMedipen
   id: EpinineAutoInjector
-  description: A rapid dose of potent stimulants and governing agents. Contains Desoxyephedrine and Dylovene. Use with extreme caution.
+  description: A rapid dose of potent stimulants and governing agents. Contains desoxyephedrine and dylovene. Use with extreme caution.
   components:
   - type: Sprite
     sprite: _NF/Objects/Specific/Medical/medipen.rsi
@@ -118,7 +118,7 @@
   name: crisis auto-injector
   parent: ChemicalMedipen
   id: CrisisAutoInjector
-  description: A rapid dose of stabilizers and vasodialaters for use on critically injured patients. Contains Inaprovaline and Dexalin Plus.
+  description: A rapid dose of stabilizers and vasodialaters for use on critically injured patients. Contains inaprovaline and dexalin plus.
   components:
   - type: Sprite
     sprite: _NF/Objects/Specific/Medical/medipen.rsi
@@ -164,12 +164,12 @@
   - type: SolutionContainerManager
     solutions:
       pen:
-        maxVol: 20
+        maxVol: 15
         reagents:
         - ReagentId: Lacerinol
           Quantity: 10
         - ReagentId: TranexamicAcid
-          Quantity: 10
+          Quantity: 5
   - type: Tag
     tags: []
     
@@ -196,11 +196,11 @@
   - type: SolutionContainerManager
     solutions:
       pen:
-        maxVol: 20
+        maxVol: 15
         reagents:
         - ReagentId: Bruizine
           Quantity: 10
         - ReagentId: TranexamicAcid
-          Quantity: 10
+          Quantity: 5
   - type: Tag
     tags: []
