Small changes to descriptions

--- a/Resources/Prototypes/_NF/Entities/Objects/Fun/toys.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Fun/toys.yml
@@ -47,7 +47,7 @@
   parent: PlushieLizard
   id: NFPlushieConstruction #Weh!
   name: construction plushie
-  description: It doubles as a hammer!
+  description: A work in progress. A shame it had to end this way.
   components:
   - type: Sprite
     sprite: _NF/Objects/Fun/toys.rsi
@@ -57,7 +57,7 @@
   parent: PlushieLizard
   id: NFPlushieCmo #Weh!
   name: chief medical officer plushie
-  description: This plushie is in charge of all of the other plushies!
+  description: Just a weh away.
   components:
   - type: Sprite
     sprite: _NF/Objects/Fun/toys.rsi
