Crafting recipe correction

--- a/Resources/Prototypes/Recipes/Cooking/medical_recipes.yml
+++ b/Resources/Prototypes/Recipes/Cooking/medical_recipes.yml
@@ -34,3 +34,164 @@
     Sigynate: 20
     Dermaline: 20
   recipeType: MedicalAssembler # Frontier
+
+#pen recipes
+#Upstream recipes
+
+- type: microwaveMealRecipe
+  id: RecipeEmergencyMedipen
+  name: emergency medipen
+  result: EmergencyMedipen
+  time: 5
+  solids:
+    BlankMediPen: 1
+  reagents:
+    Epinephrine: 12
+    TranexamicAcid: 3
+  recipeType: MedicalAssembler # Frontier
+
+- type: microwaveMealRecipe
+  id: RecipeAntiPoisonMedipen
+  name: poison auto-injector
+  result: AntiPoisonMedipen
+  time: 5
+  solids:
+    BlankMediPen: 1
+  reagents:
+    Ultravasculine: 10
+    Epinephrine: 5
+  recipeType: MedicalAssembler # Frontier
+
+- type: microwaveMealRecipe
+  id: RecipeBruteAutoInjector
+  name: brute auto-injector
+  result: BruteAutoInjector
+  time: 5
+  solids:
+    BlankMediPen: 1
+  reagents:
+    Bicaridine: 15
+    TranexamicAcid: 5
+  recipeType: MedicalAssembler # Frontier
+
+- type: microwaveMealRecipe
+  id: RecipeBurnAutoInjector
+  name: burn auto-injector
+  result: BurnAutoInjector
+  time: 5
+  solids:
+    BlankMediPen: 1
+  reagents:
+    Dermaline: 10
+    Leporazine: 10
+  recipeType: MedicalAssembler # Frontier
+
+- type: microwaveMealRecipe
+  id: RecipeRadAutoInjector
+  name: rad auto-injector
+  result: RadAutoInjector
+  time: 5
+  solids:
+    BlankMediPen: 1
+  reagents:
+    Arithrazine: 15
+    Bicaridine: 5
+  recipeType: MedicalAssembler # Frontier
+
+- type: microwaveMealRecipe
+  id: RecipePunctAutoInjector
+  name: puncturase auto-injector
+  result: PunctAutoInjector
+  time: 5
+  solids:
+    BlankMediPen: 1
+  reagents:
+    Puncturase: 10
+    TranexamicAcid: 5
+  recipeType: MedicalAssembler # Frontier
+  
+- type: microwaveMealRecipe
+  id: RecipePyraAutoInjector
+  name: pyrazine auto-injector
+  result: PyraAutoInjector
+  time: 5
+  solids:
+    BlankMediPen: 1
+  reagents:
+    Pyrazine: 10
+    Dermaline: 10
+  recipeType: MedicalAssembler # Frontier
+
+- type: microwaveMealRecipe
+  id: RecipeAirlossAutoInjector
+  name: airloss auto-injector
+  result: AirlossAutoInjector
+  time: 5
+  solids:
+    BlankMediPen: 1
+  reagents:
+    Saline: 20
+    DexalinPlus: 20
+  recipeType: MedicalAssembler # Frontier
+
+#Frontier pen recipes
+
+- type: microwaveMealRecipe
+  id: RecipePenCoagulate
+  name: coagulate auto-injector
+  result: CoagulateAutoInjector
+  time: 5
+  solids:
+    BlankMediPen: 1
+  reagents:
+    TranexamicAcid: 5
+    Saline: 15
+  recipeType: MedicalAssembler # Frontier
+
+- type: microwaveMealRecipe
+  id: RecipePenEpinine
+  name: epinine auto-injector
+  result: EpinineAutoInjector
+  time: 5
+  solids:
+    BlankMediPen: 1
+  reagents:
+    Desoxyephedrine: 10
+    Dylovene: 10
+  recipeType: MedicalAssembler # Frontier
+  
+- type: microwaveMealRecipe
+  id: RecipePenCrisisAutoInjector
+  name: crisis auto-injector
+  result: CrisisAutoInjector
+  time: 5
+  solids:
+    BlankMediPen: 1
+  reagents:
+    Inaprovaline: 10
+    DexalinPlus: 10
+  recipeType: MedicalAssembler # Frontier
+        
+- type: microwaveMealRecipe
+  id: RecipePenLacerAutoInjector
+  name: lacerinol auto-injector
+  result: LacerAutoInjector
+  time: 5
+  solids:
+    BlankMediPen: 1
+  reagents:
+    Lacerinol: 10
+    TranexamicAcid: 5
+  recipeType: MedicalAssembler # Frontier
+            
+- type: microwaveMealRecipe
+  id: RecipePenBruizAutoInjector
+  name: bruizine auto-injector
+  result: BruizAutoInjector
+  time: 5
+  solids:
+    BlankMediPen: 1
+  reagents:
+    Bruizine: 10
+    TranexamicAcid: 5
+  recipeType: MedicalAssembler # Frontier
